--- a/templates/partials/admin-header.html
+++ b/templates/partials/admin-header.html
@@ -139,3 +139,5 @@
         </ul>
     </div>
 </nav>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/network-errors.css') }}">
+<script src="{{ url_for('static', filename='js/network-errors.js') }}"></script>
