--- a/templates/partials/user-header.html
+++ b/templates/partials/user-header.html
@@ -197,3 +197,5 @@
 <script src="{{ url_for('static', filename='js/notification-badge.js') }}"></script>
 <script src="{{ url_for('static', filename='js/notification-handler.js') }}"></script>
 <script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/network-errors.css') }}">
+<script src="{{ url_for('static', filename='js/network-errors.js') }}"></script>
